--- a/commerce/auctions/templates/auctions/product.html
+++ b/commerce/auctions/templates/auctions/product.html
@@ -1,62 +1,98 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+    {% load widget_tweaks %}
+    <div class="h-100 d-flex justify-content-center container-fluid">
+        {% for product in products %}
+        
+            <div class="d-flex align-items-center justify-content-end" style="width: 70%">
 
-<main>
-    <section class="container">
-        <h1>{{ title }}</h1>  
-    </section>
-
-    <section class="container">
-        {% if request.user.is_authenticated %}
-            <span> Usuario Autenticado {{ user }}</span>
-        {% endif %}
-
-        {% for i in product %}
-                <div>
-                    <span>
-                        {{ i.Owner }}
-                    </span>
-                </div>
-                <div>
-                    <img src="https://res.cloudinary.com/den3ccjvd/image/upload/v1/{{ i.Img }}" alt="{{ product.Title }}">
-
-                </div>
-
-                <div>
-                    <span>
-                        {{ i.Description }}
-                    </span>
-                </div>
-
-                <div>
-                    <span>Initial Price {{ i.Price }}</span>
-                </div>
-
-                <div>
-                    <span>Actual Price {{ i.Final_Price }}</span>
-                </div>
-
-                <div>
-                    {% if i.Active == True %}
-                        <span>Its active</span>
-                    {% else %}
-                        <span>Its not active</span>
-                    {% endif%}
-                </div>
-
-                <div>
-                    <span>
-                        {{ i.Category}}
-                    </span>
-                </div>
-       
-                    {% endfor %}
-
-    </section>
-
+                <div class="card my-5 d-flex  justify-content-start" style="width: 50%">
+                    <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://res.cloudinary.com/den3ccjvd/image/upload/v1/{{ product.Img }}" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title text-center mb-3">{{ product.Title }}</h5>
+                            <p class="card-text text-center">{{ product.Description }}</p>
+                            <p class="card-text"><small class="text-body-secondary">Initial Price: {{ product.Price }}$</small></p>
+                            <p class="card-text"><small class="text-body-secondary">Actual Price: {{ product.Price }}$</small></p>
+                        </div>
     
-</main>
+                        <div class="card-body">
+                            {% if request.user.is_authenticated %}
+                                <div class="d-flex justify-content-start mb-3">
+                                    
+                                    <a href="{% url 'add_watchlist' product.id %}" class="btn btn-outline-info">Add to my WatchList</a>
+            
+                                </div>
+                                    <div class="d-flex justify-content-start mb-3">
+                                        <button class="btn btn-outline-info">Remove from my WatchList</button>
+                                            
+                                    </div>
+                                      
+                                <div class="d-flex ">
+                                    <form action="{% url 'product' product.id%}" method="post"></form>
+                                        <div class="input-group ">
+                                            <span class="input-group-text px-5 mb-2">$</span>
+                                            <input type="number" class="form-control" name="offer" min="{{ product.Price }}" step="0.1" >
+                                        </div>
+                                        <div class=" d-flex justify-content-end mt-2">
+                                            <button class="btn btn-outline-info">Offer</button>
+                                        </div>
+                                    </div>form
+                                </div>
+                                
+                                {% if product.Owner == request.user%}
+    
+                                    <div>
+                                        <button class="btn btn-outline-danger">Close Auction</button>
+                                    </div>
+                                {% endif %}
+                            {% else %}
+                                <a href="{% url 'register' %}" class="btn btn-outline-info">Add to my WatchList</a>
+                            {% endif %}
+                            
+                        </div>
+                    </div>
+                    </div>
+    
+                    
+                </div>
+            {% endfor %}
+            </div>
+        <div class="d-flex justify-content-end ms-5" style="width:30%;">
+            <div class="card text-bg-light mb-4 mt-5" style="width: 100%;">
+                {% for product in products %}
+                    <div class="card-header">Add Comment</div>
+                    <div class="card-body">
+                        <form method="post" action="{% url 'product' product.id %}">
+                            {% csrf_token %}
+                            <div class="input-group mb-3">
+                                <div>{% render_field form.Comment id+="Comment" class+="form-control autosize " aria-label+="With textarea" %} </div>
+                            </div>
+                            <div class="d-flex justify-content-center"><button class="btn btn-outline-info">Add Comment</button></div>
+
+                        </form>    
+                    </div>
+                {% endfor %}
+                </div>
+        </div>
+    </div>
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="card text-bg-light mb-3" style="width: 30vw;">
+                {% for comment in comments %}
+                    <div class="card-header">{{ comment.Author }}: </div>
+                    <div class="card-body">
+                    <p class="card-text">{{ comment.Comment }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+    </div>
     
 
 {% endblock %}
+
+
+
