Project 2 completed :tada:

--- a/commerce/auctions/templates/auctions/add_product.html
+++ b/commerce/auctions/templates/auctions/add_product.html
@@ -36,7 +36,7 @@
 
                 <div class="input-group my-3">
                     <span class="input-group-text px-5">$</span>
-                    {% render_field form.Price id+="Price" class+="form-control" aria-label+="Amount (to the nearest dollar)"%}
+                    {% render_field form.bid id+="Price" class+="form-control" aria-label+="Amount (to the nearest dollar)"%}
                     <span class="input-group-text">.00</span>
                 </div>
                 <div class="input-group mb-3 ">
