--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -14,18 +14,234 @@
           font-family: 'Muli', sans-serif;
           background: #ddd;
         }
+
+  
+          @import url('https://fonts.googleapis.com/css?family=Muli:400,400i,700,700i');
+      
+          .wsk-cp-product {
+              width: 100%;
+              background: #fff;
+              border-radius: 6px;
+              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          }
+      
+          .wsk-cp-img {
+              left: 50%;
+              transform: translate(-50%);
+              -webkit-transform: translate(-50%);
+              -ms-transform: translate(-50%);
+              -moz-transform: translate(-50%);
+              -o-transform: translate(-50%);
+              -khtml-transform: translate(-50%);
+              width: 100%;
+              transition: all 0.2s ease-in-out;
+          }
+      
+          .wsk-cp-img img {
+              width: 100%;
+              transition: all 0.2s ease-in-out;
+              border-radius: 6px;
+          }
+      
+          .wsk-cp-product:hover .wsk-cp-img {
+              top: -15px;
+          }
+      
+          .wsk-cp-product:hover .wsk-cp-img img {
+              box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+          }
+      
+          .wsk-cp-text {
+              padding-top: 150%;
+          }
+      
+          .wsk-cp-text .category {
+              font-size: 12px;
+              font-weight: bold;
+              transition: all 0.2s ease-in-out;
+          }
+      
+          .wsk-cp-text .category>* {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              -webkit-transform: translate(-50%, -50%);
+              -moz-transform: translate(-50%, -50%);
+              -ms-transform: translate(-50%, -50%);
+              -o-transform: translate(-50%, -50%);
+              -khtml-transform: translate(-50%, -50%);
+      
+          }
+      
+          .wsk-cp-text .category>a {
+              padding: 12px 30px;
+              border: 1px solid #313131;
+              background: #212121;
+              color: #fff;
+              box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+              border-radius: 27px;
+              transition: all 0.05s ease-in-out;
+              /* boton de offer */
+          }
+      
+          .wsk-cp-product:hover .wsk-cp-text .category>span {
+              border-color: #ddd;
+              box-shadow: none;
+              padding: 11px 28px;
+          }
+      
+          .wsk-cp-product:hover .wsk-cp-text .category {
+              margin-top: 0px;
+          }
+      
+          .wsk-cp-text .title-product {
+              text-align: center;
+          }
+      
+          .wsk-cp-text .title-product h3 {
+              font-size: 20px;
+              font-weight: bold;
+              margin: 15px auto;
+              overflow: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              width: 100%;
+          }
+      
+          .wsk-cp-text .description-prod p {
+              margin: 0;
+          }
+      
+          /* Truncate */
+          .wsk-cp-text .description-prod {
+              text-align: center;
+              width: 100%;
+              height: 62px;
+              overflow: hidden;
+              display: -webkit-box;
+              -webkit-line-clamp: 3;
+              -webkit-box-orient: vertical;
+              margin-bottom: 15px;
+          }
+      
+          .card-footer {
+              padding: 25px 0 5px;
+              border-top: 1px solid #ddd;
+          }
+      
+          .card-footer:after,
+          .card-footer:before {
+              content: '';
+              display: table;
+          }
+      
+          .card-footer:after {
+              clear: both;
+          }
+      
+          .card-footer .wcf-left {
+              float: left;
+      
+          }
+      
+          .card-footer .wcf-right {
+              float: right;
+          }
+      
+          .price {
+              font-size: 18px;
+              font-weight: bold;
+          }
+      
+          a.buy-btn {
+              display: block;
+              color: #212121;
+              text-align: center;
+              font-size: 18px;
+              width: 35px;
+              height: 35px;
+              line-height: 35px;
+              border-radius: 50%;
+              border: 1px solid #212121;
+              transition: all 0.2s ease-in-out;
+          }
+      
+          a.buy-btn:hover,
+          a.buy-btn:active,
+          a.buy-btn:focus {
+              border-color: #FF9800;
+              background: #FF9800;
+              color: #fff;
+              text-decoration: none;
+          }
+      
+          .wsk-btn {
+              display: inline-block;
+              color: #212121;
+              text-align: center;
+              font-size: 18px;
+              transition: all 0.2s ease-in-out;
+              border-color: #FF9800;
+              background: #FF9800;
+              padding: 12px 30px;
+              border-radius: 27px;
+              margin: 0 5px;
+          }
+      
+          .wsk-btn:hover,
+          .wsk-btn:focus,
+          .wsk-btn:active {
+              text-decoration: none;
+              color: #fff;
+          }
+      
+          .red {
+              color: #F44336;
+              font-size: 22px;
+              display: inline-block;
+              margin: 0 5px;
+          }
+      
+          @media screen and (max-width: 991px) {
+              .wsk-cp-product {
+                  margin: 40px auto;
+              }
+      
+              .wsk-cp-product .wsk-cp-img {
+                  top: -40px;
+              }
+      
+              .wsk-cp-product .wsk-cp-img img {
+                  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+              }
+      
+              .wsk-cp-product .wsk-cp-text .category>span {
+                  border-color: #ddd;
+                  box-shadow: none;
+                  padding: 11px 28px;
+              }
+      
+              .wsk-cp-product .wsk-cp-text .category {
+                  margin-top: 0px;
+              }
+      
+              a.buy-btn {
+                  border-color: #FF9800;
+                  background: #FF9800;
+                  color: #fff;
+              }
+          }
+      
       </style>
+
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/">Auctions</a>
+                  <a class="navbar-brand" href="{% url 'index' %}">Active Listings</a>
                  
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Active Listings</a>
-                      </li>
-                       
                       {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
@@ -43,26 +259,28 @@
                   {% endif %}
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" aria-disabled="true" href="" >{{ user.username }}</a>
-                        </li>
-                        <li class="nav-item">
                           <a class="nav-link" aria-disabled="true" href="{% url 'watchlist' %}" >WatchList</a>
-                      </li>
+                        </li>
+                        <li class="nav-item me-auto">
+                          <a class="nav-link" aria-disabled="true" href="{% url 'categories' %}" >Categories</a>
+                        </li>
+
+                        <li class="nav-item me-auto">
+                            <a class="nav-link user-select-none" aria-disabled="true" disabled > Username: <strong class=" text-decoration-underline user-select-none">{{ request.user }}</strong></a>
+                          </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link " aria-disabled="true" href="{% url 'register' %}">Not signed</a>
+                            <a class="nav-link user-select-none" aria-disabled="true" href="{% url 'register' %}"><strong class="user-select-none">Not signed</strong></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item me-auto">
                           <a class="nav-link" aria-disabled="true" href="{% url 'register' %}" >WatchList</a>
                         </li>
                     {% endif %}
 
-                    </ul>
-                    <form class="d-flex" role="search">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+                    
                   </div>
+              
+                  </ul>
                 </div>
               </nav>
         </header>
