--- a/commerce/auctions/templates/auctions/login.html
+++ b/commerce/auctions/templates/auctions/login.html
@@ -2,23 +2,30 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <h2 class="ms-5 my-5">Login</h2>
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
+    <div class="container">
+        <form action="{% url 'login' %}" method="post" class="mb-3">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input autofocus class="form-control" id="username" type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <label for="pass">Password</label>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+                <input class="form-control" id="pass" type="password" name="password" placeholder="Password">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Login">
+        </form>
+    
+        <div class="d-flex justify-content-center">
+            Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+        </div>
+    </div>
 
 {% endblock %}
