--- a/commerce/auctions/templates/auctions/product.html
+++ b/commerce/auctions/templates/auctions/product.html
@@ -1,98 +1,155 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    {% load widget_tweaks %}
-    <div class="h-100 d-flex justify-content-center container-fluid">
-        {% for product in products %}
-        
-            <div class="d-flex align-items-center justify-content-end" style="width: 70%">
+{% load widget_tweaks %}
+<div class="h-100 d-flex justify-content-center container-fluid">
+    {% for product in products %}
+    <div class="d-flex align-items-center justify-content-end" style="width: 70%">
+        <div class="card my-5 d-flex  justify-content-start" style="width: 50%">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="https://res.cloudinary.com/den3ccjvd/image/upload/v1/{{ product.Img }}"
+                        class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title text-center mb-3">{{ product.Title }}</h5>
+                        <p class="card-text text-center">{{ product.Description }}</p>
+                        <p class="card-text"><small class="text-body-secondary">Initial Price: {{ product.initial_price}}$</small></p>
+                        <p class="card-text"><small class="text-body-secondary">Actual Price: {{ product.price_new_owner.price}}$</small></p>
+                        <p class="card-text"><small class="text-body-secondary">Auction Owner: {{ product.Owner}}</small></p>
 
-                <div class="card my-5 d-flex  justify-content-start" style="width: 50%">
-                    <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="https://res.cloudinary.com/den3ccjvd/image/upload/v1/{{ product.Img }}" class="img-fluid rounded-start" alt="...">
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title text-center mb-3">{{ product.Title }}</h5>
-                            <p class="card-text text-center">{{ product.Description }}</p>
-                            <p class="card-text"><small class="text-body-secondary">Initial Price: {{ product.Price }}$</small></p>
-                            <p class="card-text"><small class="text-body-secondary">Actual Price: {{ product.Price }}$</small></p>
-                        </div>
-    
-                        <div class="card-body">
-                            {% if request.user.is_authenticated %}
+
+                    <div class="card-body">
+                        {% if request.user.is_authenticated %}
+                        
+                        {% if product.Owner != request.user %}
+                            {% if watchlist_bool %}
                                 <div class="d-flex justify-content-start mb-3">
-                                    
-                                    <a href="{% url 'add_watchlist' product.id %}" class="btn btn-outline-info">Add to my WatchList</a>
-            
+                                    <a href="{% url 'remove_watchlist' product.id %}" class="btn btn-outline-info">Remove to my WatchList</a>
+
                                 </div>
-                                    <div class="d-flex justify-content-start mb-3">
-                                        <button class="btn btn-outline-info">Remove from my WatchList</button>
-                                            
-                                    </div>
-                                      
+                            
+                            {% else %}
+                                <div class="d-flex justify-content-start mb-3">
+
+                                    <a href="{% url 'add_watchlist' product.id %}" class="btn btn-outline-info">Add to myWatchList</a>
+
+                                </div>    
+                                
+                            {% endif %}
+                        
+                            {% if product.Active %}
                                 <div class="d-flex ">
-                                    <form action="{% url 'product' product.id%}" method="post"></form>
+                                    <form action="{% url 'deals' product.id%}" method="post">
+                                        {% csrf_token %}
                                         <div class="input-group ">
                                             <span class="input-group-text px-5 mb-2">$</span>
-                                            <input type="number" class="form-control" name="offer" min="{{ product.Price }}" step="0.1" >
+                                            <input type="number" class="form-control" name="offer" min="{{ product.price_new_owner.price }}" step="0.1">
                                         </div>
                                         <div class=" d-flex justify-content-end mt-2">
-                                            <button class="btn btn-outline-info">Offer</button>
+                                            <button type="submit" class="btn btn-outline-info">Offer</button>
                                         </div>
-                                    </div>form
+                                    </form>
                                 </div>
-                                
-                                {% if product.Owner == request.user%}
-    
-                                    <div>
-                                        <button class="btn btn-outline-danger">Close Auction</button>
-                                    </div>
-                                {% endif %}
-                            {% else %}
-                                <a href="{% url 'register' %}" class="btn btn-outline-info">Add to my WatchList</a>
                             {% endif %}
-                            
-                        </div>
+                        {% endif %}
                     </div>
+
+                    {% if product.Owner == request.user%}
+                    
+                    {% if product.Active%}
+                        <form action="{% url 'offerclose' product.id %}" method="post">
+                            {% csrf_token %}
+                        
+                            <button type="submit" class="btn btn-outline-danger mb-4">Close Auction</button>
+                        </form>
+                        {% else %}
+                        <button class="btn btn-outline-danger mb-4">The auction ended</button>
+
+                    {% endif %}
+                    
+                    {% endif %}
+                    {% else %}
+                        <a href="{% url 'register' %}" class="btn btn-outline-info">Add to my WatchList</a>
+                    {% endif %}
+
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    {% endfor %}
+    <div class="d-flex justify-content-end ms-5" style="width:30%;">
+        <div class="card text-bg-light mb-4 mt-5" style="width: 100%;">
+            {% for product in products %}
+            <div class="card-header">Add Comment</div>
+            <div class="card-body">
+                <form method="post" action="{% url 'product' product.id %}">
+                    {% csrf_token %}
+                    <div class="input-group mb-3">
+                        <div>{% render_field form.Comment id+="Comment" class+="form-control autosize border border-info-subtle " aria-label+="Withtextarea"%} </div>
+                    </div>
+                    <div class="d-flex justify-content-center"><button class="btn btn-outline-info">Add Comment</button>
                     </div>
     
-                    
-                </div>
-            {% endfor %}
+                </form>
             </div>
-        <div class="d-flex justify-content-end ms-5" style="width:30%;">
-            <div class="card text-bg-light mb-4 mt-5" style="width: 100%;">
-                {% for product in products %}
-                    <div class="card-header">Add Comment</div>
-                    <div class="card-body">
-                        <form method="post" action="{% url 'product' product.id %}">
-                            {% csrf_token %}
-                            <div class="input-group mb-3">
-                                <div>{% render_field form.Comment id+="Comment" class+="form-control autosize " aria-label+="With textarea" %} </div>
-                            </div>
-                            <div class="d-flex justify-content-center"><button class="btn btn-outline-info">Add Comment</button></div>
-
-                        </form>    
-                    </div>
-                {% endfor %}
-                </div>
+            {% endfor %}
         </div>
     </div>
-    <div class="container-fluid d-flex justify-content-center">
-        <div class="card text-bg-light mb-3" style="width: 30vw;">
-                {% for comment in comments %}
-                    <div class="card-header">{{ comment.Author }}: </div>
-                    <div class="card-body">
-                    <p class="card-text">{{ comment.Comment }}</p>
+</div>
+</div>
+<div class="container-fluid d-flex justify-content-center">
+    <div>
+       
+            {% for product in products %}
+                {% if  not product.Active %}
+                    {% if product.price_new_owner.user == request.user %}
+                        <div class="alert alert-success {{ message.tags }}" role="alert">
+                            You have won the auction {{ product.price_new_owner.user }}
+                        </div>
+                    {% else %}
+                        <div class="alert alert-success {{ message.tags }}" role="alert">
+                            The auction winner is: {{ product.price_new_owner.user }}
+                        </div>
+                    {% endif  %}
+                {% else %}
+                     
+                {% endif %}
+            {% endfor %}
+      
+        
+        {% if messages %}
+        <ul class="messages">         
+                {% for message in messages %}
+                {% if message.tags == "error"%}
+                <div class="alert alert-danger {{ message.tags }}" role="alert">
+                    {{ message }}
+                </div>
+                
+                    {% else %}
+                    <div class="alert alert-success {{ message.tags }}" role="alert">
+                        {{ message }}
                     </div>
-                {% endfor %}
+                    
+                {% endif %}
+              {% endfor %}
+        </ul>
+        {% endif %}
+        <div class="h4 pb-2 mb-4 text-info border-bottom border-info">Comments</div>
+        <div class="card text-bg-light mb-3" style="width: 35vw;">
+            {% for comment in comments %}
+            <div class="card-header">{{ comment.Author }} said: </div>
+            <div class="card-body">
+                <p class="card-text">{{ comment.Comment }}</p>
             </div>
+            {% endfor %}
+        </div>
     </div>
-    
+</div>
+
 
 {% endblock %}
-
-
-
