--- a/commerce/auctions/templates/auctions/register.html
+++ b/commerce/auctions/templates/auctions/register.html
@@ -2,29 +2,37 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+    <h2 class="my-5 ms-5 ">Register</h2>
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
+    <div class="container">
+        <form action="{% url 'register' %}" method="post" class="mb-5">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input class="form-control" id="username" autofocus type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input class="form-control" id="email" type="email" name="email" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+                <label for="pass">Password</label>
+                <input class="form-control" type="password" id="pass" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label for="confirm">Confirm yourPassword</label>
+                <input class="form-control" type="password" name="confirmation" id="confirm" placeholder="Confirm Password">
+            </div>
+            <input class="btn btn-primary" type="submit" value="Register">
+        </form>
+        <div class="d-flex justify-content-center">
+            Already have an account? <a href="{% url 'login' %}">Log In here.</a>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+        </div>
+    </div>
 
 {% endblock %}
