--- a/commerce/auctions/templates/auctions/product.html
+++ b/commerce/auctions/templates/auctions/product.html
@@ -42,7 +42,7 @@
                         
                             {% if product.Active %}
                                 <div class="d-flex ">
-                                    <form action="{% url 'deals' product.id%}" method="post">
+                                    <form action="{% url 'deals' product.id%}" class="price" method="post">
                                         {% csrf_token %}
                                         <div class="input-group ">
                                             <span class="input-group-text px-5 mb-2">$</span>
@@ -82,24 +82,47 @@
 
     </div>
     {% endfor %}
-    <div class="d-flex justify-content-end ms-5" style="width:30%;">
-        <div class="card text-bg-light mb-4 mt-5" style="width: 100%;">
-            {% for product in products %}
-            <div class="card-header">Add Comment</div>
-            <div class="card-body">
-                <form method="post" action="{% url 'product' product.id %}">
-                    {% csrf_token %}
-                    <div class="input-group mb-3">
-                        <div>{% render_field form.Comment id+="Comment" class+="form-control autosize border border-info-subtle " aria-label+="Withtextarea"%} </div>
-                    </div>
-                    <div class="d-flex justify-content-center"><button class="btn btn-outline-info">Add Comment</button>
-                    </div>
-    
-                </form>
+    {% if request.user.is_authenticated %}
+        <div class="d-flex justify-content-end ms-5" style="width:30%;">
+            <div class="card text-bg-light mb-4 mt-5" style="width: 100%;">
+                {% for product in products %}
+                <div class="card-header">Add Comment</div>
+                <div class="card-body">
+                    <form method="post" action="{% url 'product' product.id %}">
+                        {% csrf_token %}
+                        <div class="input-group mb-3">
+                            <div>{% render_field form.Comment id+="Comment" class+="form-control autosize border border-info-subtle " aria-label+="Withtextarea"%} </div>
+                        </div>
+                        <div class="d-flex justify-content-center"><button class="btn btn-outline-info">Add Comment</button>
+                        </div>
+        
+                    </form>
+                </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
-    </div>
+
+        {% else %}
+            <div class="d-flex justify-content-end ms-5" style="width:30%;">
+                <div class="card text-bg-light mb-4 mt-5" style="width: 100%;">
+                    {% for product in products %}
+                    <div class="card-header">Add Comment</div>
+                    <div class="card-body">
+                        <form method="post" action="{% url 'product' product.id %}">
+                            {% csrf_token %}
+                            <div class="input-group mb-3">
+                                <div>{% render_field form.Comment id+="Comment" class+="form-control autosize border border-info-subtle " aria-label+="Withtextarea"%} </div>
+                            </div>
+                            <div class="d-flex justify-content-center"><a href="{% url 'register' %}" class="btn btn-outline-info">Add Comment</a>
+                            </div>
+            
+                        </form>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+
+        {% endif %}
 </div>
 </div>
 <div class="container-fluid d-flex justify-content-center">
@@ -150,6 +173,26 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
 
+    const form = document.querySelector("form.price");
+    form.addEventListener("submit", (event) => {
+        event.preventDefault();
+       
+        Swal.fire({
+            position: "top-center",
+            icon: "success",
+            title: "Your offer was made successfully",
+            showConfirmButton: false,
+            timer: 1500
+          });
+
+          setTimeout(() => {
+            form.submit();
+        }, 2000); // Cambia este valor según lo que consideres apropiado
+   
+    });
+</script>
 
 {% endblock %}
